--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -4,6 +4,7 @@
   width: 100%;
   color: #ffffff;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .aboutme__header {
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 60px 0 0;
+  padding: 60px 0 100px;
 }
 
 .aboutme__student {
