--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -37,6 +37,7 @@
 }
 
 .proj__step-paragraph {
+  margin: 0;
   padding: 0;
   font-style: normal;
   font-weight: 400;
@@ -82,7 +83,7 @@
 
 .proj__web-paragraph {
   margin: 0;
-  padding: 14px 0;
+  padding: 14px 0 0;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
