--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,7 +8,7 @@
 
 .footer__paragraph {
   padding: 0 0 20px;
-  margin: 0 0 20px;
+  margin: 79px 0 19px;
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid #424242;
@@ -18,6 +18,7 @@
   line-height: 16px;
   text-align: center;
   color: #8b8b8b;
+  box-sizing: border-box;
 }
 
 .footer__description {
