--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,10 +1,9 @@
 .promo__header {
-  position: relative;
-  background: #073042;
-  margin: 0 auto;
-  min-height: 598px;
   width: calc(100% + 70px * 2);
   height: 100%;
+  margin: 0 auto;
+  position: relative;
+  background: #073042;
   left: -70px;
   bottom: 74px;
 }
@@ -24,17 +23,37 @@
 .promo__header-text {
   padding: 0;
   margin: 0 auto;
-
-  min-width: 730px;
+  width: 100%;
+  max-width: 730px;
   font-weight: 400;
   font-size: 50px;
   line-height: 116%;
   text-align: center;
   color: white;
+  letter-spacing: -0.04em;
 
   position: absolute;
   top: 53%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
+}
+
+@media screen and (max-width: 800px) {
+  .promo__header {
+    height: 100%;
+    width: calc(100% + 30px * 2);
+    left: -30px;
+  }
+
+  .promo__header-img {
+    margin: 298px auto 240px;
+  }
+}
+
+@media screen and (max-width: 735px) {
+  .promo__header-text {
+    max-width: 730px;
+    min-width: 300px;
+  }
 }
