--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -48,3 +48,22 @@
   color: black;
   margin-left: 5px;
 }
+
+@media screen and (max-width: 500px) {
+  .header__button {
+    height: 26px;
+    padding: 5px 13px;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 160%;
+  }
+
+  .header__signup {
+    margin-right: 0px;
+  }
+
+  .header__signin {
+    margin-left: 0px;
+  }
+
+}
