feat: preloader, movie-filter are added

--- a/src/components/HeaderLoggedIn/HeaderLoggedIn.css
+++ b/src/components/HeaderLoggedIn/HeaderLoggedIn.css
@@ -27,7 +27,7 @@
   height: 32px;
   padding-left: 31px;
   margin-left: 50px;
-  background: url(../../../images/account-logo/account-logo.svg);
+  background: url(../../images/account-logo/account-logo.svg);
   background-repeat: no-repeat;
   background-position: left 12px center;
   background-size: 12px 14px;
