feat: grid gallery

--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,5 +1,8 @@
-.movies{
+.movies {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  max-height: 1068px;
-  height: 1068px
+  min-height: 100vh;
+  padding: 0;
+  margin: 0 auto;
 }
