--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -3,12 +3,9 @@
   flex-direction: column;
   width: 270px;
   height: 218px;
-
-
   background: #222222;
   box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
-
 }
 
 .movie-card__info {
@@ -25,18 +22,13 @@
 }
 
 .movie-card__cover {
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
   height: 151px;
   min-height: 0;
   min-width: 0;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-}
-
-.movie-card__cover > img{
   object-fit: cover;
-  height: auto;
 }
 
 .movie-card__name {
@@ -84,11 +76,45 @@
   transition: opacity 0.5s ease-in-out;
 }
 
-.movie-card__save-button:hover {
+.movie-card__remove-button {
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-image: url('.././../images/remove/remove.svg');
+  background-position: center center;
+  background-size: 8px 8px;
+  background-repeat: no-repeat;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.movie-card__save-button:hover,
+.movie-card__remove-button:hover {
   opacity: 0.5;
   cursor: pointer;
 }
 
 label input:checked + .movie-card__save-button {
   background-color: #3ddc84;
+}
+
+@media screen and (max-width: 800px) {
+  .movie-card {
+    width: 339px;
+    height: 257px;
+  }
+
+  .movie-card__cover {
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .movie-card {
+    width: 300px;
+    height: 235px;
+  }
+
+  .movie-card__cover {
+    height: 168px;
+  }
 }
