--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@
 
   max-width: 100vw;
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100%;
 
   margin: 0 auto;
   padding: 0px 70px 20px;
