--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,9 @@
 .app {
   display: flex;
   flex-direction: column;
-
-  max-width: 100vw;
+  min-width: 100vw;
+  min-height: 100vh;
   min-width: 320px;
-  max-height: 100%;
 
   margin: 0 auto;
   padding: 0px 70px 20px;
