--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -84,6 +84,7 @@
   background-position: center center;
   background-size: 8px 8px;
   background-repeat: no-repeat;
+  background-color: transparent;
   transition: opacity 0.5s ease-in-out;
 }
 
