--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -68,10 +68,13 @@
 
 .filter__checkbox_visible {
   width: 100%;
+  transition: opacity .5s ease-in-out;
 }
 
 .filter__checkbox_visible:hover {
   cursor: pointer;
+  opacity: .5;
+
 }
 
 .filter__checkbox_hidden:checked + .filter__checkbox_visible .filter__dot {
@@ -79,10 +82,10 @@
   animation: filter_dot_shorts 0.1s ease-in-out forwards;
 }
 
-@media screen and (max-width:500px) {
+@media screen and (max-width: 500px) {
   .filter__caption {
-  margin: 0 0 0 13px;
-  font-size: 11px;
-  line-height: 164%;
-}
+    margin: 0 0 0 13px;
+    font-size: 11px;
+    line-height: 164%;
+  }
 }
