--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,12 +9,20 @@
 .header__logo {
   height: 38px;
   width: 38px;
+
 }
 
 .header__logo-img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.header__logo-button{
+  border: none;
+  background: none;
+  padding: 0;
 }
 
 .header__button {
@@ -30,11 +38,6 @@
   transition: opacity 0.5s ease-in-out;
 }
 
-.header__button:hover {
-  opacity: 0.5;
-  cursor: pointer;
-}
-
 .header__signup {
   background: none;
   font-weight: 500;
@@ -46,6 +49,12 @@
   background: #3ddc84;
   color: black;
   margin-left: 5px;
+}
+
+.header__logo-img:hover,
+.header__button:hover {
+  opacity: 0.5;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 500px) {
@@ -64,5 +73,4 @@
   .header__signin {
     margin-left: 0px;
   }
-
 }
