--- a/src/components/NotFoundPage/PageNotFound.css
+++ b/src/components/NotFoundPage/PageNotFound.css
@@ -26,7 +26,9 @@
   color: #ffffff;
 }
 
-.pagenotfound__link {
+.pagenotfound__button {
+  background: none;
+  border:none;
   padding: 0;
   font-weight: 400;
   font-size: 14px;
@@ -37,7 +39,7 @@
   transition: opacity 0.5s ease-in-out;
 }
 
-.pagenotfound__link:hover {
+.pagenotfound__button:hover {
   opacity: 0.5;
   cursor: pointer;
 }
@@ -63,7 +65,7 @@
     line-height: 15px;
   }
 
-  .pagenotfound__link {
+  .pagenotfound__button {
     font-size: 12px;
     line-height: 15px;
   }
