--- a/src/components/HeaderLoggedIn/HeaderLoggedIn.css
+++ b/src/components/HeaderLoggedIn/HeaderLoggedIn.css
@@ -50,7 +50,7 @@
   padding: 0;
   height: 28px;
   width: 28px;
-  margin-top: 5px;
+  margin-top: 7px;
   transition: opacity 0.5s ease-in-out;
 }
 
@@ -68,4 +68,11 @@
 .header__menu:hover {
   opacity: 0.5;
   cursor: pointer;
+}
+
+@media screen and  (max-width:500px){
+  .header__menu{
+    width: 22px;
+    height: 22px;
+  }
 }
