--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -74,6 +74,7 @@
   border-radius: 50px;
   border: 2px solid #ffffff;
   transition: opacity 0.5s ease-in-out;
+  box-sizing: border-box;
 }
 
 .movie-card__remove-button {
