--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -6,7 +6,7 @@
   margin: 0 auto 10px;
   width: 100%;
   height: 237px;
-  max-height: 236px;
+  max-height: 237px;
   border-bottom: 1px solid rgba(66, 66, 66, 1);
   box-sizing: border-box;
 }
@@ -14,7 +14,7 @@
 .search-form__inputs {
   display: flex;
   align-items: center;
-  margin-bottom: 42px;
+  margin-bottom: 40px;
   width: 100%;
   height: 46px;
   background: #2f2f2f;
@@ -58,4 +58,16 @@
 .search-form__submit:hover {
   opacity: 0.5;
   cursor: pointer;
+}
+
+@media screen and (max-width:800px) {
+  .search-form__inputs{
+    margin: 25px 0 40px;
+  }
+}
+
+@media screen and (max-width:500px) {
+  .search-form__inputs{
+    margin: 30px 0 40px;
+  }
 }
