--- a/src/components/ShowMoreButton/ShowMoreButton.css
+++ b/src/components/ShowMoreButton/ShowMoreButton.css
@@ -10,7 +10,7 @@
   width: 320px;
   height: 36px;
   padding: 0;
-  margin: 0 auto;
+  margin: 0 auto 22px;
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
