--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,7 +3,6 @@
   flex-direction: column;
 
   max-width: 100vw;
-  min-width: 320px;
   min-height: 100vh;
 
   margin: 0 auto;
@@ -13,13 +12,20 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 800px){
+.app__container {
+  width: 100%;
+  height: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 800px) {
   .app {
     padding: 0px 30px 20px;
   }
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 500px) {
   .app {
     padding: 0px 14px 20px;
   }
