--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -61,7 +61,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: #3DDC84;
+  background: #3ddc84;
   border-radius: 50px;
 }
 
@@ -83,6 +83,6 @@
 
 .preloader__round::before {
   z-index: 10;
-  background: #3DDC84;
+  background: #3ddc84;
   animation: preloader-inside-green 1s ease-in-out infinite;
 }
