--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -40,6 +40,7 @@
 
 .search-form__input-error{
   width: 100%;
+  height: 17px;
   padding: 3px 22px;
   margin-bottom: 22px;
   box-sizing: border-box;
@@ -67,6 +68,11 @@
 
   transition: opacity 0.5s ease-in-out;
 }
+
+.search-form__submit:disabled{
+  opacity: 0.5;
+}
+
 
 .search-form__submit:hover {
   opacity: 0.5;
