--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -89,6 +89,7 @@
   transition: opacity 0.5s ease-in-out;
 }
 
+.movie-card__cover:hover,
 .movie-card__save-button:hover,
 .movie-card__remove-button:hover {
   opacity: 0.5;
