--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -4,7 +4,8 @@
   margin: 0 auto;
   position: relative;
   max-height: 1068px;
-  min-height: 100%;
+  min-height: 318px;
+  /* min-height: 100%; */
   overflow: hidden;
 }
 
@@ -36,6 +37,7 @@
 @media screen and (max-width: 800px) {
   .movies-preloader {
     max-height: 1236px;
+    min-height: 650px;
   }
 
   .movies-list {
@@ -58,6 +60,7 @@
 
   .movies-preloader {
     max-height: 1315px;
+    min-height: 560px;
     margin: 0 auto 10px;
   }
 
