--- a/src/components/InfoPopUp/InfoPopUp.css
+++ b/src/components/InfoPopUp/InfoPopUp.css
@@ -69,6 +69,9 @@
 }
 
 .popup__message {
+  display: flex;
+  justify-content: center;
+  text-align: center;
   margin: 0 auto;
   padding: 0;
   font-weight: 400;
