--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -54,6 +54,10 @@
   color: #ffffff;
 }
 
+.profile__form-input_error {
+  color: #ee3465;
+}
+
 .profile__input-error {
   width: 100%;
   height: 17px;
@@ -84,6 +88,10 @@
 
 .profile__button-edit {
   color: #ffffff;
+}
+
+.profile__button-edit:disabled{
+  opacity: .5;
 }
 
 .profile__button-signout {
