feat: preloader, name validation, info popup

--- a/src/components/InfoPopUp/InfoPopUp.css
+++ b/src/components/InfoPopUp/InfoPopUp.css
@@ -51,7 +51,7 @@
   height: 40px;
   width: 40px;
   margin: 0 auto 30px;
-  background-image: url(../../images/info-popup/err.png);
+  background-image: url(../../images/info-popup/movie.svg);
   background-repeat: no-repeat;
   background-size: 40px 40px;
 }
