--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  /* min-height: 100vh; */
+  min-height: 60vh;
   height: 100%;
   padding: 0;
   margin: 0 auto;
